--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio de Osvaldo Sandoval Cárdenas</title>
+    <link rel="stylesheet" href="/all.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
      Ingenieria en Videojuegos
+     <i class="fa-brands fa-facebook"></i>
+     <i class="fa-solid fa-user"></i>
+     <i class="fa-solid fa-location-dot"></i>
+
+    <div class="content">
+        <div class="content-logo">
+            <div>LOGO</div>
+        </div>
+        <div class="content-nav">
+            <div>UNO</div>
+            <div>DOS</div>
+            <div>TRES</div>
+        </div>
+     </div>
+     <div class="content-map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1584.532957926481!2d-100.13231740516495!3d19.16566631202107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cd648c5e14465d%3A0x8fb97593c7e131c4!2sEL%20CRATER%2016!5e0!3m2!1ses!2smx!4v1716431682226!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 </body>
 </html>
